--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "to generate task summary per month for a team.",
   "main": "sum.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node sum 201507"
   },
   "repository": {
     "type": "git",
