--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/stoneChen/task-summary#readme",
   "dependencies": {
     "jade": "^1.11.0",
+    "lodash": "^3.10.1",
     "yamljs": "^0.2.4"
   }
 }
