--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/stoneChen/task-summary#readme",
   "dependencies": {
+    "chalk": "^1.1.1",
     "jade": "^1.11.0",
     "lodash": "^3.10.1",
     "yamljs": "^0.2.4"
